Use lists for lores instead of multiple strings, use modern Java facilities to process them